verification chapter edits

--- a/benchmark.tex
+++ b/benchmark.tex
@@ -1,4 +1,4 @@
-\section{CNRS Benchmark}
+\section{CNRS Benchmark Verification Study} \label{sec:cnrs-benchmark}
 
 As identified in Section \ref{sec:msfr-critique},
 Moltres will benefit from further \gls{VV} of its
@@ -13,9 +13,9 @@ multiphysics coupling until full coupling is simulated in the final steps. This
 gradual approach helps participants identify sources of discrepancies
 that can arise from differences in modeling assumptions or
 cross-section libraries, or actual errors in the software. I adapted the
-contents of this chapter from my journal article titled
-``\textit{Verification of Moltres for Multiphysics Simulations of Fast-Spectrum
-Molten Salt Reactors}'' and published in the Annals of Nuclear Energy journal
+contents of this chapter from my journal article in the Annals of Nuclear Energy, titled
+\textit{Verification of Moltres for Multiphysics Simulations of Fast-Spectrum
+Molten Salt Reactors}
 \cite{park_verification_2022}.
 
 \input{cnrs-benchmark/benchmark}
