--- a/cnrs-benchmark/results.tex
+++ b/cnrs-benchmark/results.tex
@@ -1,4 +1,4 @@
-\subsection{Results}
+\subsection{Results \& Discussion}
 
 In this section, we compare the results from Moltres for each CNRS Benchmark
 step to the results in the benchmark paper \cite{tiberga_results_2020}.
