--- a/moltres.tex
+++ b/moltres.tex
@@ -1,6 +1,6 @@
 \section{Description of Moltres} \label{sec:moltres-description}
 
-This chapter provides an overview of Moltres as a multiphysics
+This section provides an overview of Moltres as a multiphysics
 simulation software for molten salt reactors. 
 Section \ref{sec:moltres-features}
 describes the general software features of Moltres, Section
