Fix minor errors

--- a/benchmark.tex
+++ b/benchmark.tex
@@ -1,6 +1,6 @@
 \section{CNRS Benchmark Verification Study} \label{sec:cnrs-benchmark}
 
-As identified in Section \ref{sec:msfr-critique},
+As identified in the previous section,
 Moltres will benefit from further \gls{VV} of its
 \gls{MSR} modeling capabilities. This chapter presents verification
 results from Moltres for problems within the CNRS Benchmark
