--- a/main.tex
+++ b/main.tex
@@ -149,15 +149,15 @@ nogroupskip=true]
 \input{verification}
 \glsresetall
 
-%\chapter{Hybrid $S_N$-Diffusion Method}
-%\label{chap:hybrid}
-%\input{hybrid}
-%\glsresetall
+\chapter{Hybrid $S_N$-Diffusion Method}
+\label{chap:hybrid}
+\input{hybrid}
+\glsresetall
 
-%\chapter{Demonstration of the Hybrid Method with the MSRE}
-%\label{chap:msre}
-%\input{msre}
-%\glsresetall
+\chapter{Demonstration of the Hybrid Method with the MSRE}
+\label{chap:msre}
+\input{msre}
+\glsresetall
 
 %\chapter{Proposed Work}
 %\label{chap:proposedwork}
