--- a/msre-pump.tex
+++ b/msre-pump.tex
@@ -1,3 +1,5 @@
+\section{MSRE Zero-Power Pump Experiments} \label{sec:msre-pump}
+
 This section covers a \gls{VV} study based on the \gls{MSRE} zero-power pump
 start-up and coast-down pump transient tests. In collaboration with Aaron Reynolds (formerly from
 Oregon State University) we verified and validated the looped \gls{DNP} flow modeling capability of
@@ -196,7 +198,7 @@ angular flux value. Combined with the different spatial discretization schemes, 
 the boundary are expected in numerical calculations. Nevertheless, the overall ratio magnitudes
 remain small, thereby showing that Moltres and QuasiMolto are consistent with each other.
 
-\begin{figure}[t]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[b]{0.48\columnwidth}
     \centering
