--- a/verification.tex
+++ b/verification.tex
@@ -1,30 +1,64 @@
-Section \ref{sec:msr-vv} identifies salt flow-induced \gls{DNP} drift and the strong coupling
+Section \ref{sec:msr-vv} identified salt flow-induced \gls{DNP} drift and the strong coupling
 between neutronics and thermal-hydraulics as two critical multiphysics interactions that must be
 accurately modeled in \gls{MSR} simulation software. This chapter describes Moltres and
-subsequently covers several \gls{VV} studies for verifying and validating specific modeling
-capabilities in Moltres which relate to the aforementioned multiphysics interactions.
-
+subsequently presents several \gls{VV} results and analyses for verifying and validating specific
+modeling capabilities in Moltres which relate to the aforementioned multiphysics interactions.
 Section \ref{sec:moltres-description} details the neutronics, thermal-hydraulics, and multiphysics
 coupling schemes in Moltres for \gls{MSR} multiphysics simulations. Following the model
 descriptions, the section also summarizes and assesses previous \gls{MSR} analyses
 performed with Moltres. Section \ref{sec:cnrs-benchmark} presents verification results from Moltres
 for the CNRS benchmark study. Section \ref{sec:msre-pump} presents key findings from a
 collaborative \gls{VV} study based on the \gls{MSRE} pump transient tests conducted in the 1960s.
-Section \ref{sec:turbulence} describes the Spalart-Allmaras turbulence model implementation in
+Section \ref{sec:turbulence} describes the \gls{SA} turbulence model implementation in
 Moltres and presents the model \gls{VV} results against common wall-bounded turbulent flow case
 studies from literature.
 
 \input{moltres}
 \input{benchmark}
 
-\section{MSRE Zero-Power Pump Experiments} \label{sec:msre-pump}
-
 \input{msre-pump}
-
-\section{Moltres Spalart-Allmaras Turbulence Model Verification} \label{sec:turbulence}
 
 \input{turbulence}
 
+\FloatBarrier
+
 \section{Summary}
 
+Moltres is a highly scalable \gls{MOOSE}-based multiphysics application for advanced reactor
+simulations with a strong focus on \glspl{MSR} modeling. It features the multigroup neutron
+diffusion and thermal-hydraulics models, along with robust and flexible coupling capabilities for
+modeling multiphysics interactions in reactors.
 
+This chapter presented two \gls{VV} studies aimed at primarily assessing Moltres for modeling
+two key multiphysics interactions in \glspl{MSR}, namely looped \gls{DNP} flow modeling and the
+strong coupling between neutronics and thermal-hydraulics. The first study is the CNRS numerical
+benchmark for fast-spectrum \gls{MSR} modeling. The simulation results showed that Moltres is
+consistent with the four \gls{MSR} simulation software that participated in the CNRS benchmark
+study \cite{tiberga_results_2020} over a wide range of neutronics and thermal-hydraulics simulation
+metrics. Moltres underpredicts the temperature along the top boundary due to unphysical,
+discontinuous velocity boundary conditions defined at the top corners of the lid-driven cavity
+flow setup. Nevertheless, the temperature deviations are limited to the top boundary and Moltres
+is otherwise in excellent agreement with the benchmark participants.
+
+The second study is a collaborative work with the developer of QuasiMolto for assessing \gls{DNP}
+flow modeling in the \gls{MSRE} zero-power pump start-up and coast-down transient tests conducted
+in the 1960s \cite{prince_zero-power_1968}. Despite the widely different numerical schemes between
+Moltres and QuasiMolto, both codes were consistent with each other under all considered scenarios.
+$k_\text{eff}$ estimates from both codes were 22 pcm and 21 pcm apart under static and steady salt
+flow conditions. Consequently, the calculated reactivity loss due to \gls{DNP} flow agreed within
+less than 1 pcm. Spatial flux and \gls{DNP} distributions showed nearly perfect overlap with less
+than 0.8\% relative difference between Moltres and QuasiMolto. Moltres and QuasiMolto remained
+consistent with each other in the pump start-up and coast-down transients. We attributed
+discrepancies between the numerical results and \gls{ORNL} experimental data to the absence of
+upper and lower plena in the numerical model. The numerical study remains a useful benchmark for
+assessing \gls{DNP} advection modeling in \gls{MSR} simulation software due to clearly defined
+salt recirculation behavior reflected in the results.
+
+Lastly, this chapter presented the implementation and verification of the \gls{SA} model
+\cite{spalart_one-equation_1994} in Moltres for enabling wall-bounded turbulent molten salt flow
+modeling. The \gls{SA} model includes a rotation correction scheme
+\cite{aupoix_extensions_2003, dacles-mariani_numericalexperimental_1995} for improved accuracy when
+modeling turbulent flow with curved streamlines. The \gls{SA} model performed well under the
+turbulent channel flow verification test \cite{moser_direct_1999}, the turbulent pipe flow
+validation test \cite{laufer_structure_1954}, and the \gls{BFS} flow validation test
+\cite{driver_features_1985}.
